[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/main.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api/src/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api/src/gj_icon.png" type="Texture" id=3]
[ext_resource path="res://scene/main.theme" type="Theme" id=4]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gj" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="scroll_container" type="ScrollContainer" parent="."]
margin_right = 992.0
margin_bottom = 544.0

[node name="container" type="GridContainer" parent="scroll_container"]
margin_right = 992.0
margin_bottom = 544.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="auth" type="PanelContainer" parent="scroll_container/container"]
margin_right = 320.0
margin_bottom = 264.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="noauth" type="VBoxContainer" parent="scroll_container/container/auth"]
margin_left = 6.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 100 )
custom_constants/separation = 16

[node name="auth_text" type="Label" parent="scroll_container/container/auth/noauth"]
margin_right = 308.0
margin_bottom = 22.0
text = "Authentification"

[node name="auto_auth" type="Button" parent="scroll_container/container/auth/noauth"]
margin_top = 38.0
margin_right = 308.0
margin_bottom = 60.0
text = "Auto auth"

[node name="separator" type="Control" parent="scroll_container/container/auth/noauth"]
margin_top = 76.0
margin_right = 308.0
margin_bottom = 101.0
size_flags_vertical = 3

[node name="auth_name" type="LineEdit" parent="scroll_container/container/auth/noauth"]
margin_top = 117.0
margin_right = 308.0
margin_bottom = 139.0
placeholder_text = "Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="auth_token" type="LineEdit" parent="scroll_container/container/auth/noauth"]
margin_top = 155.0
margin_right = 308.0
margin_bottom = 177.0
secret = true
placeholder_text = "Token"
caret_blink = true
caret_blink_speed = 0.5

[node name="normal_auth" type="Button" parent="scroll_container/container/auth/noauth"]
margin_top = 193.0
margin_right = 308.0
margin_bottom = 215.0
text = "Normal auth"

[node name="separator2" type="Control" parent="scroll_container/container/auth/noauth"]
margin_top = 231.0
margin_right = 308.0
margin_bottom = 256.0
size_flags_vertical = 3

[node name="welcome_text" type="Label" parent="scroll_container/container/auth"]
margin_left = 6.0
margin_top = 121.0
margin_right = 314.0
margin_bottom = 143.0
align = 1
valign = 1

[node name="score" type="PanelContainer" parent="scroll_container/container"]
margin_left = 336.0
margin_right = 656.0
margin_bottom = 264.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="container" type="VBoxContainer" parent="scroll_container/container/score"]
margin_left = 6.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 260.0
size_flags_vertical = 7
custom_constants/separation = 16

[node name="text" type="Label" parent="scroll_container/container/score/container"]
margin_right = 308.0
margin_bottom = 22.0
text = "Score"

[node name="score_button" type="Button" parent="scroll_container/container/score/container"]
margin_top = 38.0
margin_right = 308.0
margin_bottom = 60.0
disabled = true
text = "Add +1 to score"

[node name="score_text" type="Label" parent="scroll_container/container/score/container"]
margin_top = 76.0
margin_right = 308.0
margin_bottom = 98.0

[node name="trophy" type="PanelContainer" parent="scroll_container/container"]
margin_left = 672.0
margin_right = 992.0
margin_bottom = 264.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="container" type="VBoxContainer" parent="scroll_container/container/trophy"]
margin_left = 6.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 260.0
custom_constants/separation = 16

[node name="text" type="Label" parent="scroll_container/container/trophy/container"]
margin_right = 308.0
margin_bottom = 22.0
text = "Trophy"

[node name="button_trophy" type="Button" parent="scroll_container/container/trophy/container"]
margin_top = 38.0
margin_right = 308.0
margin_bottom = 60.0
disabled = true
text = "add me a trophy"

[node name="ScrollContainer" type="ScrollContainer" parent="scroll_container/container/trophy/container"]
margin_top = 76.0
margin_right = 308.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="trophies_container" type="VBoxContainer" parent="scroll_container/container/trophy/container/ScrollContainer"]
margin_right = 308.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Leaderboard" type="PanelContainer" parent="scroll_container/container"]
margin_top = 280.0
margin_right = 320.0
margin_bottom = 544.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="container" type="VBoxContainer" parent="scroll_container/container/Leaderboard"]
margin_left = 6.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 260.0
custom_constants/separation = 16

[node name="text" type="Label" parent="scroll_container/container/Leaderboard/container"]
margin_right = 308.0
margin_bottom = 22.0
text = "The clicker champions"

[node name="text_ld" type="Label" parent="scroll_container/container/Leaderboard/container"]
margin_top = 38.0
margin_right = 308.0
margin_bottom = 60.0
autowrap = true

[node name="Control" type="Control" parent="scroll_container/container"]
margin_left = 336.0
margin_top = 280.0
margin_right = 656.0
margin_bottom = 544.0
size_flags_vertical = 3

[node name="cont_log" type="PanelContainer" parent="scroll_container/container"]
show_behind_parent = true
margin_left = 672.0
margin_top = 280.0
margin_right = 992.0
margin_bottom = 544.0
size_flags_vertical = 3

[node name="log_text" type="RichTextLabel" parent="scroll_container/container/cont_log"]
margin_left = 6.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 200 )
focus_mode = 2
text = "
"
scroll_following = true
selection_enabled = true

[connection signal="pressed" from="scroll_container/container/auth/noauth/auto_auth" to="." method="_on_auto_auth_pressed"]
[connection signal="text_changed" from="scroll_container/container/auth/noauth/auth_name" to="." method="_on_auth_name_text_changed"]
[connection signal="text_changed" from="scroll_container/container/auth/noauth/auth_token" to="." method="_on_auth_token_text_changed"]
[connection signal="pressed" from="scroll_container/container/auth/noauth/normal_auth" to="." method="_on_normal_auth_pressed"]
[connection signal="pressed" from="scroll_container/container/score/container/score_button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="scroll_container/container/trophy/container/button_trophy" to="." method="_on_button_trophy_pressed"]
